# agentic-multimodal-rag

./: .gitignore  README.md  app.py  main.py  pyproject.toml
sql/: seed.sql  seed1.sql
src/api/v1/agents/: agents.py
src/api/v1/routes/: query_routes.py  upload_routes.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: fts_search.py  hybrid_search.py  vector_search.py
src/core/: db.py
src/ingestion/: docling_parser.py  ingestion.py
