[project]
name = "agentic-multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "docling>=2.85.0",
    "langchain-postgres>=0.0.17",
    "python-multipart>=0.0.24",
]
