[project]
name = "agentic-multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling[full]>=2.88.0",
    "fastapi[standard]>=0.135.3",
    "google-genai>=1.73.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.6",
    "psycopg>=3.3.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
